[AIX-197] added model pricing page
